--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-    const weatherApiKey = "cbfae166ed8241a12093367b15d4b392"; // Replace with your actual API key
-    const apiKey = "AIzaSyC56g30u8bjTqn4cHd5P1eolfe5iwHMc7E"; // Replace with your actual Gemini API key
+const UNSPLASH_ACCESS_KEY = "VDe53wmJz2fr6bUtiu5UgDbgNNGrJNgn2SMdBAfGsWw";
+  const WEATHER_API_KEY = "cbfae166ed8241a12093367b15d4b392";
+  const GEMINI_API_KEY = "AIzaSyC56g30u8bjTqn4cHd5P1eolfe5iwHMc7E";
